[package]
name = "rust-baseline-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-merkle-mountain-range = { git = "https://github.com/nervosnetwork/merkle-mountain-range", rev = "8206b58", default-features = false }
ckb-std = "0.12.1"
blake2b-rs = { git = "https://github.com/nervosnetwork/blake2b-rs", rev = "4e694ee" }
